@@ -3,6 +3,7 @@
  *   LinuxSampler - modular, streaming capable sampler                     *
  *                                                                         *
  *   Copyright (C) 2003, 2004 by Benno Senoner and Christian Schoenebeck   *
+ *   Copyright (C) 2005 Christian Schoenebeck                              *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -123,7 +124,7 @@ namespace LinuxSampler {
                 return y;
             }
 
-#if ARCH_X86
+#if CONFIG_ASM && ARCH_X86
             // expects to find input in xmm0 (xmm0 stays unmodified) and finally leaves output in xmm6
             inline void Apply4StepsSSE(biquad_param_t* param) {
                 __asm__ __volatile__ (
@@ -210,7 +211,7 @@ namespace LinuxSampler {
                       "r" (&param->b0)  /* %2 */
                 );
             }
-#endif // ARCH_X86
+#endif // CONFIG_ASM && ARCH_X86
 
             inline bq_t ApplyFB(bq_t x, const bq_t fb) {
                 bq_t y;
@@ -242,7 +243,7 @@ namespace LinuxSampler {
                 return y;
             }
 
-#if ARCH_X86
+#if CONFIG_ASM && ARCH_X86
             // expects to find input in xmm0 (xmm0 stays unmodified) and finally leaves output in xmm7
             inline void ApplyFB4StepsSSE(biquad_param_t* param, const bq_t &fb) {
                 float xs, ys;
@@ -438,7 +439,7 @@ namespace LinuxSampler {
                     ::
                 );
             }
-#endif // ARCH_X86
+#endif // CONFIG_ASM && ARCH_X86
     };
 
     /** @brief Lowpass Filter
